syntax = "proto3";

package quasar.v1;

option go_package = "github.com/itsubaki/quasar/gen/quasar/v1;quasarv1";

message SimulateRequest {
  string code = 1;
}

message SimulateResponse {
  message Amplitude {
    double real = 1;
    double imag = 2;
  }

  message State {
    Amplitude amplitude = 1;
    double probability = 2;
    repeated uint64 int = 3;
    repeated string binary_string = 4;
  }

  repeated State state = 1;
}

service QuasarService {
  rpc Simulate(SimulateRequest) returns (SimulateResponse) {};
}
